--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
       &nbsp;<a href="https://cvsweb.openbsd.org/">CVS on Web</a><br>
       &nbsp;<a href="https://github.com/openbsd">Проект на GitHub</a><br>
       <p>
-      <big><b>Информация о OpenBSD</b></big><br>
+      <big><b>Информация</b></big><br>
       &nbsp;<a href="faq/index.html">FAQ</a><br>
       &nbsp;<a href="https://man.openbsd.org">Man-страницы</a><br>
       &nbsp;<a href="errata64.html">Патчи</a><br>
