--- a/index.html
+++ b/index.html
@@ -51,9 +51,9 @@
   <tr>
     <td class="sidebar align-top">
       <big><b>Проект OpenBSD</b></big><br>
-      &nbsp;<a href="goals.html">Задачи проекта</a><br>
+      &nbsp;<a href="goals.html">Цели проекта</a><br>
       &nbsp;<a href="plat.html">Платформы</a><br>
-      &nbsp;<a href="security.html">БезопасностЬ</A>
+      &nbsp;<a href="security.html">Безопасность</A>
       &nbsp;<a href="crypto.html">Криптография</a><br>
       &nbsp;<a href="events.html">Встречи</a>
       &nbsp;<a href="innovations.html">Инновации</a><br>
@@ -64,7 +64,7 @@
       <big><b>Исходники</b></big><br>
       &nbsp;<a href="anoncvs.html">AnonCVS</a>
       &nbsp;<a href="cvsync.html">CVSync</a><br>
-      &nbsp;<a href="https://cvsweb.openbsd.org/">CVS on Web</a><br>
+      &nbsp;<a href="https://cvsweb.openbsd.org/">CVS Web</a><br>
       &nbsp;<a href="https://github.com/openbsd">Проект на GitHub</a><br>
       <p>
       <big><b>Информация</b></big><br>
@@ -73,7 +73,7 @@
       &nbsp;<a href="errata64.html">Патчи</a><br>
       &nbsp;<a href="ircs://irc.freenode.net:6697/openbsd">IRC</a><br>
       &nbsp;<a href="report.html">Сообщить об ошибке</a><br>
-      &nbsp;<a href="mail.html">Рассылка</a><br>
+      &nbsp;<a href="mail.html">Почтовые рассылки</a><br>
       &nbsp;<a href="lyrics.html">Песни</a> &amp;
             <a href="artwork.html">Artwork</a><br>
       &nbsp;<a href="hackathons.html">Hackathons</a><br>
@@ -92,28 +92,25 @@
         <img border="0" src="images/puffy64.jpg" height="198" width="599" alt="[OpenBSD 6.4]"></a>
         <br>
         <span class="callout">
-        Всего две ошибки сетевой безопасности в стандартной установке за все время
-        существования системы!<br>
+        Всего две уязвимости при стандартной установке за все время существования системы!<br>
         </span>
       </div>
 
       <p>
-      В рамках проекта OpenBSD разрабатывается <b>СВОБОДНАЯ</b>, мультиплатформенная
-      UNIX-подобная операционная система, основанная на коде 4.4BSD. Мы акцентируем свое
-      внимание на переносимости, стандартизации, корректности,
-      <a href="security.html">безопасности</a> и
-      <a href="crypto.html">криптографии</a>. В качестве примера успеха OpenBSD проекта
-      можно назвать <a href="https://www.openssh.com">OpenSSH</a>, первоночально написанную
-      для OpenBSD.
+      В рамках проекта OpenBSD разрабатывается <b>СВОБОДНАЯ</b>, мультиплатформенная, основанная
+      на коде 4.4BSD, UNIX-подобная операционная система. Мы придаем большое внимание
+      переносимости, следованию стандартам, точности, <a href="security.html">безопасности</a> и
+      <a href="crypto.html">криптографии</a>. В качестве примера успеха проекта можно назвать
+      <a href="https://www.openssh.com">OpenSSH</a>, первоночально написанную для OpenBSD.
       <p>
-      OpenBSD можно скачать через наши download станицы.
+      Информацию по поводу загрузки OpenBSD можно найти на станице download.
       <p>
-      Последний релиз <a href="64.html">OpenBSD 6.4</a>, вышел 18 октября 2018.
+      Последний релиз нашей системы, <a href="64.html">OpenBSD 6.4</a>, вышел 18 октября 2018.
       <p>
-      OpenBSD разрабатывается добровольцами. Процесс разработки и
+      OpenBSD разрабатывается добровольцами. Процесс разработки, а также
       <a href="hackathons.html">встречи разработчиков</a> возможны благодаря финансовым взносам,
       собранным <a href="https://www.openbsdfoundation.org">The OpenBSD Foundation</a>.
-      Пожертвования гарантируют дальнейшую разработку OpenBSD, которая останется
+      Эти пожертвования гарантируют дальнейшую разработку OpenBSD, которая остается
       <a href="../policy.html">свободной</a> для всех.
     </td>
   </tr>
