sync security.html

--- a/security.html
+++ b/security.html
@@ -228,7 +228,7 @@ written somewhere, but perhaps not taken to the degree that we do.
 
 <li><h3><font color="#e00000">Advisories</font></h3><p>
 
-Please refer to the links at the top of this page.
+Пожалуйста обратите внимание на ссылки вверху страницы.
 
 <a name="watching"></a>
 <li><h3><font color="#e00000">Отслеживания изменений</font></h3><p>
@@ -273,19 +273,19 @@ things:<p>
 <a name="reporting"></a>
 <li><h3><font color="#e00000">Сообщения о проблемах</font></h3><p>
 
-<p> If you find a new security problem, you can mail it to
+<p> Если вы обнаружили новую уязвимость, сообщите нам, отправив письмо на
 <a href="mailto:deraadt@openbsd.org">deraadt@openbsd.org</a>.
 <br>
-If you wish to PGP encode it (but please only do so if privacy is very
-urgent, since it is inconvenient) use this <a href="advisories/pgpkey.txt">pgp key</a>.
+Если вы желаете зашифровать письмо при помощи PGP (пользуйтесь им
+только при крайней необходимости, так как это не так удобно), используйте этот
+<a href="../advisories/pgpkey.txt">pgp ключ</a>.
 
 <p>
 <a name="papers"></a>
 <li><h3><font color="#e00000">Дополнительно</font></h3><p>
 
-Numerous
-<a href="papers/index.html">papers</a> have been written by OpenBSD team members,
-many dedicated to security.
+OpenBSD разработчиками написаны <a href="papers/index.html">материалы</a>,
+некоторые из которых так или иначе связаны с темой безопасности.
 </ul>
 
 </body>
