--- a/security.html
+++ b/security.html
@@ -89,7 +89,7 @@ OpenBSD верит в стойкую безопасность. Мы стреми
 
 
 Как и большинство читателей
-<a href="http://online.securityfocus.com/archive/1">
+<a href="https://www.securityfocus.com/archive/1">
 рассылки BUGTRAQ</a>, мы верим в преимущества абсолютного разглашения
 проблем безопасности. Среди множества операционных систем мы, похоже,
 первые кто использует такой подход. Многие производители, в том
@@ -132,7 +132,7 @@ OpenBSD верит в стойкую безопасность. Мы стреми
 другие, чтобы исправить и их. Мы устранили множество простых и очевидных
 ошибок невнимательного программирования и только по прошествии нескольких
 месяцев обнаружили, что они действительно опасны. (Или, более вероятно, что
-кто-то на <a href="http://online.securityfocus.com/archive/1">BUGTRAQ</a>
+кто-то на <a href="https://www.securityfocus.com/archive/1">BUGTRAQ</a>
 опубликует, что другие операционные системы уязвимы к `недавно обнаруженной
 проблеме`, и тогда выяснится, что в OpenBSD эта ошибка уже была исправлена
 ещё в прошлом релизе). В других случаях, мы застрахованы от реализации
