--- a/security.html
+++ b/security.html
@@ -20,7 +20,7 @@
 <hr>
 <p>
 
-For security advisories for specific releases, click below:
+Используйте ссылки ниже, если интересуетесь безопасностью конкретного релиза.
 <p>
 
 <a href="https://openbsd.org/errata21.html">2.1</a>,
@@ -85,7 +85,7 @@ OpenBSD верит в стойкую безопасность. Мы стреми
 больше возможностей и подходов к устранению проблем безопасности.
 
 <a name="disclosure"></a>
-<li><h3><font color="#e00000">Абсолютная открытость</font></h3><p>
+<li><h3><font color="#e00000">Приинцип абсолютной открытости</font></h3><p>
 
 
 Как и большинство читателей
