[1.439] translating 'New Technologies' part

--- a/security.html
+++ b/security.html
@@ -144,9 +144,10 @@ Networks.<p>
 <a name="newtech"></a>
 <li><h3><font color="#e00000">Новые технологии</font></h3><p>
 
-As we audit source code, we often invent new ways of solving problems.
-Sometimes these ideas have been used before in some random application
-written somewhere, but perhaps not taken to the degree that we do.
+Проверяя исходники, у нас часто появляются новые идеи и мы находим новые
+способы решения тех или иных проблем. Иногда бывает и так, что найденные
+решения уже использовались в какой-то программе, написанной ранее, но,
+возможно, не на таком уровне, на каком это делаем мы.
 <p>
 
 <ul>
@@ -165,7 +166,7 @@ written somewhere, but perhaps not taken to the degree that we do.
   <li>Chroot jailing
   <li>New uids
   <li>ProPolice
-  <li>... <a href="/innovations.html">and others</a>
+  <li>... <a href="/innovations.html">и другие</a>
 </ul>
 <p>
 
