[1.439] added 'Watching our Changes' part

--- a/security.html
+++ b/security.html
@@ -172,7 +172,7 @@ Networks.<p>
 
 <li><h3><font color="#e00000">Награда</font></h3><p>
 
-Наш про-активный процесс аудита действительно оправдан. Заявления
+Наш проактивный процесс аудита действительно оправдан. Заявления
 подобно ``Эта проблема была устранена в OpenBSD приблизительно 6
 месяцев назад'' стали обычным явлением на security-форумах подобных
 <a href="http://online.securityfocus.com/archive/1">BUGTRAQ</a>.<p>
@@ -232,20 +232,23 @@ Networks.<p>
 Пожалуйста обратите внимание на ссылки вверху страницы.
 
 <a name="watching"></a>
-<li><h3><font color="#e00000">Отслеживания изменений</font></h3><p>
+<li><h3><font color="#e00000">Следите за изменениями</font></h3><p>
 
-Since we take a proactive stance with security, we are continually
-finding and fixing new security problems.  Not all of these problems
-get widely reported because (as stated earlier) many of them are not
-confirmed to be exploitable; many simple bugs we fix do turn out to
-have security consequences we could not predict.  We do not have the
-time resources to make these changes available in the above format.<p>
+Так как относительно безопасности мы выбрали проактивную позицию, мы
+не перестаем находить и устранять новые проблемы безопасности. Тем не
+менее, не все из них придаются широкой ограске. Происходит это из-за того,
+что (как уже было сказано) многие из них не представляют серьезной опасности,
+т.к. не могут быть использованы для проведения атак; многие простые ошибки,
+которые мы уже исправили в прошлом, оказывается, могли были привести к
+проблемам безопасности, о которых мы тогда не могли подумать и предсказать.
+У нас нет столько времени, чтобы официально сообщать обо всех подобных
+исправлениях.<p>
 
-Thus there are usually minor security fixes in the current source code
-beyond the previous major OpenBSD release.  We make a limited
-guarantee that these problems are of minimal impact and unproven
-exploitability.  If we discover that a problem definitely matters for
-security, patches will show up here <strong>VERY</strong> quickly.<p>
+Таким образом, в репозитории обычно есть незначительные исправления для
+последнего релиза OpenBSD. Мы гарантируем, что эти исправления имеют
+минимальное влияние на безопасность и непригодны для реализации атак.
+Если мы обнаружим, что проблема определённо связана с безопасностью,
+патчи появятся здесь <strong>очень</strong> быстро.<p>
 
 People who are really concerned with security can do a number of
 things:<p>
