[1.439] translating 'Watching our Changes' part

--- a/security.html
+++ b/security.html
@@ -248,10 +248,9 @@ Networks.<p>
 последнего релиза OpenBSD. Мы гарантируем, что эти исправления имеют
 минимальное влияние на безопасность и непригодны для реализации атак.
 Если мы обнаружим, что проблема определённо связана с безопасностью,
-патчи появятся здесь <strong>очень</strong> быстро.<p>
+патчи появятся здесь <strong>ОЧЕНЬ</strong> быстро.<p>
 
-People who are really concerned with security can do a number of
-things:<p>
+Те, кто действительно заботится о безопасности, могут делать следующее:<p>
 
 <ul>
 <li>If you understand security issues, watch our
