--- a/hackathons.html
+++ b/hackathons.html
@@ -2,7 +2,7 @@
 	"http://www.w3.org/TR/html4/loose.dtd">
 <html>
 <head>
-<title>OpenBSD: Hackathons</title>
+<title>OpenBSD: Хакатоны</title>
 <meta name="description" content="the OpenBSD release song hackathon page">
 <meta name="copyright" content="This document copyright 2000-2016 by OpenBSD.">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
@@ -33,55 +33,56 @@ td {
 <h2>
 <a href="index.html">
 <font color="#0000ff"><i>Open</i></font><font color="#000084">BSD</font></a>
-<font color="#e00000">Hackathons</font>
+<font color="#e00000">Хакатоны</font>
 </h2>
 <hr>
 <p>
-
-In June of 1999, OpenBSD held the first hackathon.  In the months
-leading up to this, either Theo or Niels Provos had coined this new
-word "hackathon".  A bunch of developers from around the world congregated
-into a house in Calgary, and within the week had the first IPv6 and IPSEC
-stacks completely integrated into an operating system... an industry
-first.. an accidental scrape in a hardwood floor commemorates the event.
+В июне 1999 OpenBSD провела свой первый хакатон. За несколько месяцев
+до этого то ли Тео, то ли Нильс придумали это новое слово «хакатон».
+Группа разработчиков со всего мира собралась в доме в Калгари, и в течение
+недели первые версии стеков IPv6 и IPSEC были полностью интегрированны в
+операционную систему... впервые... случайная царапина на деревяном полу
+служит тому напоминанием.
 <p>
 
-In succeeding years, the OpenBSD development process has benefited
-greatly from holding more of these events.  In our form, hackathons
-do not have talks, nor a specific schedule.  People will arrive at
-a hackathon to work for a straight stretch of time on the projects
-they wish to, in the same room as the people who they need to talk
-to about their ideas.  Hackathons are about writing code.  At hackathons
-there is an attempt to get new changes into the source tree quickly.
-Since people from many different timezones are in the same room,
-development is almost around the clock.  Developers sometimes joke
-about returning home without jet-lag.
+В последние годы процесс разработки OpenBSD значительно выиграл от
+проведения большего количества этих встреч. Во время хакатонов не читаются
+доклады, четкого графика их проведения тоже нет. Люди приезжают сюда для
+того, чтобы сосредоточиться и работать над выбранным проктом, собравшись
+вместе с теми, кто им нужен для обсуждения своих идей. Хакатон это прежде
+всего создание кода. На этих встречах люди пытаются как можно быстрее улучшить
+существующий код. Так как в одной комнате собираются люди из разных часовых
+поясов, работа над кодом продолжается практичестки круглосуточно.
+Разработчики иногда шутят о возвращении домой без нарушения временной
+адаптации.
 <p>
 
-Hackathons attendees come by invitation only.  Some new people in
-the community who show promise are sometimes invited to see if they
-have what it takes.  However, hackathons are not developer training
-events.
+На хакатон приезжают только по приглашению. Иногда приглашаются новые
+люди из сообщества, мотивация которых видна, чтобы познакомиться с ними
+и узнать, на что они действительно способны. Тем не менее, хакатоны не
+являются встречами с целью обучения разработчиков.
 <p>
 
-The event space and accommodation is typically funded by
-<a href="donations.html">donations to the OpenBSD Project</a>, or
-by the <a href="https://www.openbsdfoundation.org">OpenBSD Foundation</a>,
-however most developers pay for their own travel.  The facilities
-are always chosen to be highly economical; generally near Universities
-or in cheaper locales.  If anyone wants to help us <b>FUND ONE OF THESE
-EVENTS OR A DEVELOPER'S TRAVEL</b>, please contact Theo de Raadt (who
-generally has the most knowledge about upcoming options), or directly
-offer travel expenses to a developer for the next event.  General
-financing is more interesting, but we will entertain offers for free
-locations as well.
+Помещение для проведения встреч, а так же ночлег для его участников,
+финансируется за счет
+<a href="donations.html">пожертвований проекту OpenBSD</a> или 
+<a href="https://www.openbsdfoundation.org">OpenBSD Foundation</a>,
+тем не менее большинство разработчиков платят за свою поездку сами.
+Место проведения всегда выбирается с экономической точки зрения; как
+правило недалеко от университетов или более дешевые. Если кто-то хочет
+помочь нам <b>В ФИНАНСИРОВАНИИ ХАКАТОНА ИЛИ ПОЕЗДКЕ РАЗРАБОТЧИКА</b>,
+пожалуйста, свяжитесь с Тео де Раадтом (который обычно в курсе планируемых
+встреч) или напрямую предложите разработчику командировочные. Обычная
+арендная стоимость для нас более предпочтительнее, но мы рассматриваем
+предложения и для бесплатных мест.
 <p>
 
-Here are some details about past and future events, also showing
-a part of the artwork from the event T-shirt (if there was one made).
-The shirts are only given to people who attend the event, and are
-worn with pride.  Every shirt contains at least one developer in-joke,
-so don't worry if you can't understand the shirt.  Just enjoy them.
+Вот некоторые детали о прошедьших встречах. Вы можете увидеть так
+же мотивы/иллюстрации футболок (если они были сделаны). Футболки
+выдаются только тем, кто посещал встречи, и их носят с гордостью.
+Каждая футболка содержит шутливую карикатуру хотя бы одного разработчика,
+так что не волнуйтесь, если что-то покажется неясным. Просто
+наслаждайтесь ими.
 <p>
 
 <table>
