--- a/hackathons.html
+++ b/hackathons.html
@@ -48,7 +48,7 @@ td {
 В последние годы процесс разработки OpenBSD значительно выиграл от
 проведения большего количества этих встреч. Во время хакатонов не читаются
 доклады, четкого графика их проведения тоже нет. Люди приезжают сюда для
-того, чтобы сосредоточиться и работать над выбранным проктом, собравшись
+того, чтобы сосредоточиться и работать над выбранным проектом, собравшись
 вместе с теми, кто им нужен для обсуждения своих идей. Хакатон это прежде
 всего создание кода. На этих встречах люди пытаются как можно быстрее улучшить
 существующий код. Так как в одной комнате собираются люди из разных часовых
@@ -91,9 +91,9 @@ td {
     <a id="a2k19" href="images/hackathons/a2k19.gif">
     <img src="images/hackathons/a2k19-s.gif"></a><br>
     a2k19: antipodean mini hackathon<br>
-    Jan 17-24, 2019<br>
+    Январь 17-24, 2019<br>
     Wellington, New Zealand<br>
-    18 developers<br>
+    18 разработчиков<br>
     Supported by the <a href="https://www.victoria.ac.nz">Victoria University of Wellington</a>
     and funded by <a href="https://www.openbsdfoundation.org">The OpenBSD Foundation</a>.
     <br>
@@ -101,18 +101,18 @@ td {
     <a id="l2k18" href="images/hackathons/l2k18.jpg">
     <img src="images/hackathons/l2k18-s.gif"></a><br>
     l2k18: libressl mini hackathon<br>
-    Nov 3-11, 2018<br>
+    Ноябрь 3-11, 2018<br>
     Edmonton, Canada<br>
-    5 developers<br>
+    5 разработчиков<br>
     Supported by <a href="https://www.openbsdfoundation.org">The OpenBSD Foundation</a>.
     <br>
 <td>
     <a id="n2k18" href="images/hackathons/n2k18.gif">
     <img src="images/hackathons/n2k18-s.gif"></a><br>
     n2k18: network hackathon<br>
-    Sept 6-11, 2018<br>
+    Сентябрь 6-11, 2018<br>
     &Uacute;st&iacute; nad Labem, Czech Republic<br>
-    11 developers<br>
+    11 разработчиков<br>
     Supported by Univerzita Jana Evangelisty Purkyn&#283; and
     funded by Oracle and
     <a href="https://www.openbsdfoundation.org">The OpenBSD Foundation</a>.
@@ -121,27 +121,27 @@ td {
     <a id="g2k18" href="images/hackathons/g2k18.gif">
     <img src="images/hackathons/g2k18-s.gif"></a><br>
     g2k18: general hackathon<br>
-    Jul 8-13, 2018<br>
-    Ljubljana, Slovenia<br>
-    39 developers<br>
+    Июль 8-13, 2018<br>
+    Любляна, Словения<br>
+    39 разработчиков<br>
     Funded by <a href="https://www.openbsdfoundation.org">The OpenBSD Foundation</a>
     and with the support of Mitja Mu&#382;eni&#269;.
 <td>
     <a id="p2k18" href="images/hackathons/p2k18.gif">
     <img src="images/hackathons/p2k18-s.gif"></a><br>
     p2k18: ports (and pledge) hackathon<br>
-    Apr 23-29, 2018<br>
-    Nantes, France<br>
-    24 developers<br>
+    Апрель 23-29, 2018<br>
+    Nantes, Франция<br>
+    24 разработчиков<br>
     Funded by <a href="https://www.openbsdfoundation.org">The OpenBSD Foundation</a>
     and with the support of <a href="http://www.epitech.eu">Epitech Nantes</a>.
 <td>
     <a id="a2k18" href="images/hackathons/a2k18.gif">
     <img src="images/hackathons/a2k18-s.gif"></a><br>
     a2k18: antipodean hackathon<br>
-    Feb 5-11, 2018<br>
-    Dunedin, New Zealand<br>
-    19 developers<br>
+    Февраль 5-11, 2018<br>
+    Данидин, Новая Зеландия<br>
+    19 разработчиков<br>
     Funded by <a href="https://www.openbsdfoundation.org">The OpenBSD Foundation</a>
     and with the support of <a href="http://www.otago.ac.nz">University of Otago</a>.
 <tr>
@@ -149,18 +149,18 @@ td {
     <a id="s2k17" href="images/hackathons/s2k17.gif">
     <img src="images/hackathons/s2k17-s.gif"></a><br>
     s2k17: snowshoe hackathon<br>
-    Nov 26 - 29, 2017<br>
+    Ноябрь 26 - 29, 2017<br>
     Elk Lakes Cabin, BC<br>
-    10 developers<br>
+    10 разработчиков<br>
     Funded by <a href="http://www.foretell.ca">ForeTell Technologies</a>
     and with the support of <a href="http://www.xplornet.ca">Xplornet</a>.
 <td>
     <a id="p2k17" href="images/hackathons/p2k17.gif">
     <img src="images/hackathons/p2k17-s.gif"></a><br>
-    p2k17: ports hackathon<br>
-    Nov 1 - 6, 2017<br>
-    Berlin, Germany<br>
-    23 developers<br>
+    p2k17: Порты<br>
+    Ноябрь 1 - 6, 2017<br>
+    Берлин, Германия<br>
+    23 разработчиков<br>
     Funded by <a href="https://www.openbsdfoundation.org">The OpenBSD Foundation</a>
     with the support of <a href="http://www.in-berlin.de">IN-Berlin</a> and
     <a href="http://www.hostserver.de/">Hostserver</a>.
@@ -168,9 +168,9 @@ td {
     <a id="t2k17" href="images/hackathons/t2k17.jpg">
     <img src="images/hackathons/t2k17-s.gif"></a><br>
     t2k17: general hackathon<br>
-    Aug 9 - 15, 2017<br>
-    Toronto, Canada<br>
-    38 developers<br>
+    Август 9 - 15, 2017<br>
+    Торонто, Канада<br>
+    38 разработчиков<br>
     Funded by <a href="https://www.openbsdfoundation.org">The OpenBSD Foundation</a>
     and with the support of <a href="http://www.utoronto.ca">University of Toronto</a>.
 <tr>
@@ -178,26 +178,26 @@ td {
     <a id="d2k17" href="images/hackathons/d2k17.gif">
     <img src="images/hackathons/d2k17-s.gif"></a><br>
     d2k17: network mini-hackathon<br>
-    May 26 - 31, 2017<br>
-    Starnberg, Germany<br>
-    24 developers<br>
+    Май 26 - 31, 2017<br>
+    Штарнберг, Германия<br>
+    24 разработчика<br>
     Funded by <a href="https://www.openbsdfoundation.org">The OpenBSD Foundation</a>
     and with the support of <a href="http://www.genua.de">genua</a>.
 <td>
     <a id="noshirt" href="images/hackathons/noshirt-s.gif">
     <img src="images/hackathons/noshirt-s.gif"></a><br>
     e2k17: nano-hackathon<br>
-    March 25 - 28, 2017<br>
-    Edmonton, Canada<br>
-    5 developers<br>
-    With the support of Bob Beck.
+    Март 25 - 28, 2017<br>
+    Эдмонтон, Канада<br>
+    5 разработчиков<br>
+    При поддержке Bob Beck.
 <td>
     <a id="a2k17" href="images/hackathons/a2k17.gif">
     <img src="images/hackathons/a2k17-s.gif"></a><br>
     a2k17: antipodean hackathon<br>
-    Jan 19 - 26, 2017<br>
-    Brisbane, Australia<br>
-    19 developers<br>
+    Январь 19 - 26, 2017<br>
+    Брисбен, Австралия<br>
+    19 разработчиков<br>
     Funded by <a href="https://www.openbsdfoundation.org">The OpenBSD Foundation</a>
     and with the support of David Gwynne.	
 <tr>
@@ -215,10 +215,10 @@ td {
     <br>
     <br>
     <br>
-    l2k16: libressl hackathon<br>
-    Nov 2 - 6, 2016<br>
-    Toulouse, France<br>
-    9 developers<br>
+    l2k16: хакатон libressl<br>
+    Ноябрь 2 - 6, 2016<br>
+    Тулуза, Франция<br>
+    9 разработчиков<br>
     Funded by <a href="https://www.openbsdfoundation.org">The OpenBSD Foundation</a>
     with the help of <a href="http://www.enseeiht.fr">ENSEEIHT</a> and
     <a href="http://www.objectif-libre.com">Objectif Libre</a>.
@@ -226,17 +226,17 @@ td {
     <a id="b2k16" href="images/hackathons/b2k16.gif">
     <img src="images/hackathons/b2k16-s.gif"></a><br>
     b2k16: budapest ports hackathon<br>
-    Oct 31 - Nov 5, 2016<br>
-    Budapest, Hungary<br>
-    10 developers<br>
+    Октябрь 31 - Nov 5, 2016<br>
+    Будапешт, Венгрия<br>
+    10 разработчиков<br>
     Funded by <a href="https://www.openbsdfoundation.org">The OpenBSD Foundation</a>.
 <td>
     <a id="g2k16" href="images/hackathons/g2k16.gif">
     <img src="images/hackathons/g2k16-s.gif"></a><br>
     g2k16: general hackathon<br>
-    Aug 30 - Sep 5, 2016<br>
-    Cambridge, UK<br>
-    62 developers<br>
+    Август 30 - Sep 5, 2016<br>
+    Кэмбридж, Великобритания<br>
+    62 разработчика<br>
     Funded by <a href="https://www.openbsdfoundation.org">The OpenBSD Foundation</a>
     with the help of
     <a href="http://www.cl.cam.ac.uk">Computer Laboratory, Cambridge</a>.
@@ -245,9 +245,9 @@ td {
     <a id="n2k16" href="images/hackathons/n2k16.gif">
     <img src="images/hackathons/n2k16-s.gif"></a><br>
     n2k16: network hackathon<br>
-    Jul 18 - 22, 2016<br>
-    Prague, Czech Republic<br>
-    18 developers<br>
+    Июль 18 - 22, 2016<br>
+    Прага, Чехия<br>
+    18 разработчиков<br>
     Funded by <a href="https://www.openbsdfoundation.org">The OpenBSD Foundation</a>
     and <a href="http://www.oracle.com">Oracle</a>, with the help of
     <a href="http://cuni.cz">Charles University</a>.
@@ -255,18 +255,18 @@ td {
     <a id="p2k16" href="images/hackathons/p2k16.gif">
     <img src="images/hackathons/p2k16-s.gif"></a><br>
     p2k16: ports hackathon<br>
-    Apr 25 - 29, 2016<br>
+    Апрель 25 - 29, 2016<br>
     Nantes, France<br>
-    22 developers<br>
+    22 разработчиков<br>
     Funded by <a href="https://www.openbsdfoundation.org">The OpenBSD Foundation</a>
     and with the support of <a href="http://www.epitech.eu">Epitech Nantes</a>.
 <td>
     <a id="n2k15" href="images/hackathons/n2k15.gif">
     <img src="images/hackathons/n2k15-s.gif"></a><br>
     n2k15: network MP hackathon<br>
-    Dec 1 - 6, 2015<br>
-    Hannover, Germany<br>
-    19 developers<br>
+    Декабрь 1 - 6, 2015<br>
+    Ганновер, Германия<br>
+    19 разработчиков<br>
     Funded by <a href="https://www.openbsdfoundation.org">The OpenBSD Foundation</a>
     and with the support of <a href="http://esdenera.com">Esdenera Networks</a>.
 <tr>
@@ -274,54 +274,54 @@ td {
     <a id="u2k15" href="images/hackathons/u2k15.gif">
     <img src="images/hackathons/u2k15-s.gif"></a><br>
     u2k15: utf8 hackathon<br>
-    Oct 22 - 27, 2015<br>
-    Berlin, Germany<br>
-    22 developers<br>
+    Октябрь 22 - 27, 2015<br>
+    Берлин, Германия<br>
+    22 разработчика<br>
     Funded by <a href="https://www.openbsdfoundation.org">The OpenBSD Foundation</a>
     and with the support of <a href="http://www.in-berlin.de">IN-Berlin</a>.
 <td>
     <a id="l2k15" href="images/hackathons/l2k15.gif">
     <img src="images/hackathons/l2k15-s.gif"></a><br>
     l2k15: libressl hackathon<br>
-    Sep 8 - 13, 2015<br>
+    Сентябрь 8 - 13, 2015<br>
     <a href="http://foi.unizg.hr">Faculty of Organization and Informatics</a>, Vara&#382;din, Croatia<br>
-    17 developers<br>
+    17 разработчиков<br>
     Funded by <a href="https://www.openbsdfoundation.org">The OpenBSD Foundation</a>
     with help of the <a href="http://foi.unizg.hr">Open Systems and Security Lab</a>.
 <td>
     <a id="j2k15" href="images/hackathons/j2k15.gif">
     <img src="images/hackathons/j2k15-s.gif"></a><br>
     j2k15: uefi hackathon<br>
-    Aug 30 - Sep 2, 2015<br>
-    Nasu, Tochigi, Japan<br>
-    6 developers<br>
+    Август 30 - Sep 2, 2015<br>
+    п. Насу, Тотиги, Япония<br>
+    6 разработчиков<br>
     With the support of <a href="http://www.iij-ii.co.jp/en/">IIJ innovation institute</a>.
 <tr>
 <td>
     <a id="c2k15" href="images/hackathons/c2k15.gif">
     <img src="images/hackathons/c2k15-s.gif"></a><br>
     c2k15: general hackathon<br>
-    Jul 15 - 21, 2015<br>
+    Июль 15 - 21, 2015<br>
     <a href="http://sait.ca">SAIT</a>, Calgary<br>
-    45 developers<br>
+    45 разработчиков<br>
     Funded by <a href="https://www.openbsdfoundation.org">The OpenBSD Foundation</a>
     and with the support of <a href="http://sait.ca">SAIT</a>.
 <td>
     <a id="p2k15" href="images/hackathons/p2k15.gif">
     <img src="images/hackathons/p2k15-s.gif"></a><br>
     p2k15: ports mini hackathon<br>
-    Apr 2 - 7, 2015<br>
+    Апрель 2 - 7, 2015<br>
     <a href="http://emps.exeter.ac.uk/">University of Exeter</a>, UK<br>
-    14 developers<br>
+    14 разработчиков<br>
     Funded by <a href="https://www.openbsdfoundation.org">The OpenBSD Foundation</a>
     and with the support of Andy Henderson.
 <td>
     <a id="s2k15" href="images/hackathons/s2k15.gif">
     <img src="images/hackathons/s2k15-s.gif"></a><br>
     s2k15: southern mini hackathon<br>
-    Feb 6 - 13, 2015<br>
-    Brisbane, Australia<br>
-    21 developers<br>
+    Февраль 6 - 13, 2015<br>
+    Брисбен, Австралия<br>
+    21 разработчиков<br>
     Funded by <a href="https://www.openbsdfoundation.org">The OpenBSD Foundation</a>
     and with the support of David Gwynne.
 <tr>
@@ -329,9 +329,9 @@ td {
     <a id="g2k14" href="images/hackathons/g2k14.gif">
     <img src="images/hackathons/g2k14-s.gif"></a><br>
     g2k14: general hackathon<br>
-    July 8 - 14, 2014<br>
-    Ljubljana, Slovenia<br>
-    49 developers<br>
+    Июль 8 - 14, 2014<br>
+    Любляна, Словения<br>
+    49 разработчиков<br>
     Funded by <a href="https://www.openbsdfoundation.org">The OpenBSD Foundation</a>
     and with the support of Mitja Mu&#382;eni&#269;.
 <td>
@@ -340,7 +340,7 @@ td {
     m2k14: mini hackathon<br>
     Apr 17 - 22, 2014<br>
     Marrakech, Morocco<br>
-    12 developers<br>
+    12 разработчиков<br>
     Funded by <a href="https://www.openbsdfoundation.org">The OpenBSD Foundation</a>
     and with the support of <a href="http://www.uca.ma/">Universit&eacute; Cadi Ayyad</a>.
 <td>
@@ -357,9 +357,9 @@ td {
     <a id="b2k13" href="images/hackathons/b2k13.gif">
     <img src="images/hackathons/b2k13-s.gif"></a><br>
     b2k13: mini hackathon<br>
-    Oct 17 - 21, 2013<br>
-    Berlin, Germany<br>
-    21 developers<br>
+    Октябрь 17 - 21, 2013<br>
+    Берлин, Германия<br>
+    21 разработчик<br>
     Funded by <a href="https://www.openbsdfoundation.org">The OpenBSD Foundation</a>
     and with the support of <a href="http://www.in-berlin.de">IN-Berlin</a>.
 <td>
@@ -367,17 +367,17 @@ td {
     <img src="images/hackathons/t2k13-s.gif"></a><br>
     t2k13: general hackathon<br>
     May 29 - Jun 5, 2013<br>
-    Toronto, Canada<br>
-    43 developers<br>
+    Торонто, Канада<br>
+    43 разработчика<br>
     Funded by <a href="https://www.openbsdfoundation.org">The OpenBSD Foundation</a>
     and with the support of <a href="http://www.utoronto.ca">University of Toronto</a>.
 <td>
     <a id="n2k13" href="images/hackathons/n2k13.gif">
     <img src="images/hackathons/n2k13-s.gif"></a><br>
     n2k13: network hackathon<br>
-    Jan 13 - 19, 2013<br>
+    Январь 13 - 19, 2013<br>
     Dunedin, New Zealand<br>
-    17 developers<br>
+    17 разработчиков<br>
     Funded by <a href="https://www.openbsdfoundation.org">The OpenBSD Foundation</a>
     and with the support of <a href="http://www.otago.ac.nz">University of Otago</a>.
 <tr>
@@ -385,17 +385,17 @@ td {
     <a id="c2k12" href="images/hackathons/c2k12.gif">
     <img src="images/hackathons/c2k12-s.gif"></a><br>
     c2k12: coimbra hackathon<br>
-    Nov 14 - 20, 2012<br>
+    Ноябрь 14 - 20, 2012<br>
     Coimbra, Portugal<br>
-    10 developers<br>
+    10 разработчиков<br>
     Funded by <a href="https://www.openbsdfoundation.org">The OpenBSD Foundation</a>
     and with the support of <a href="http://www.uc.pt">University of Coimbra</a>.
 <td>
     <a id="p2k12" href="images/hackathons/p2k12.gif">
     <img src="images/hackathons/p2k12-s.gif"></a><br>
     p2k12: ports hackathon<br>
-    Oct 8 - 13, 2012<br>
-    Budapest, Hungary<br>
+    Октябрь 8 - 13, 2012<br>
+    Будапешт, Вергрия<br>
     9 developers<br>
     Funded by <a href="donations.html">donations to
     The OpenBSD Project</a>.
@@ -403,26 +403,26 @@ td {
     <a id="n2k12" href="images/hackathons/n2k12.gif">
     <img src="images/hackathons/n2k12-s.gif"></a><br>
     n2k12: network hackathon<br>
-    Sep 17 - 21, 2012<br>
-    Starnberg, Germany<br>
-    23 developers<br>
+    Сентябь 17 - 21, 2012<br>
+    Штанберг, Германия<br>
+    23 разработчика<br>
     Funded by <a href="http://www.genua.de">genua</a>.
 <tr>
 <td>
     <a id="g2k12" href="images/hackathons/g2k12.gif">
     <img src="images/hackathons/g2k12-s.gif"></a><br>
     g2k12: general hackathon<br>
-    Jul 7 - 14, 2012<br>
-    Budapest, Hungary<br>
-    41 developers<br>
+    Июль 7 - 14, 2012<br>
+    Будапешт, Венгрия<br>
+    41 разработчик<br>
     Funded by <a href="https://www.openbsdfoundation.org">The OpenBSD Foundation</a>.
 <td>
     <a id="r2k12" href="images/hackathons/r2k12.gif">
     <img src="images/hackathons/r2k12-s.gif"></a><br>
     r2k12: rthreads hackathon<br>
-    Apr 10 - 14, 2012<br>
-    Paris, France<br>
-    16 developers<br>
+    Апрель 10 - 14, 2012<br>
+    Париж, Франция<br>
+    16 разработчиков<br>
     Funded by <a href="https://www.openbsdfoundation.org">The OpenBSD Foundation</a>
     and support of <a href="http://www.ihp.fr">Institute Henri Poincar&eacute;</a> and
     <a href="http://www.u-psud.fr">Paris-Sud University</a>.
