[1.439] 'Watching our Changes' part is translated

--- a/security.html
+++ b/security.html
@@ -253,23 +253,22 @@ Networks.<p>
 Те, кто действительно заботится о безопасности, могут делать следующее:<p>
 
 <ul>
-<li>If you understand security issues, watch our
-	<a href="mail.html">source-changes mailing list</a> and keep an
-	eye out for things which appear security related.  Since
-	exploitability is not proven for many of the fixes we make,
-	do not expect the relevant commit message to say "SECURITY FIX!".
-	If a problem is proven and serious, a patch will be available
-	here very shortly after.
-<li>Track our current source code tree, and teach yourself how to do a
-	complete system build from time to time (read /usr/src/Makefile
-	carefully).  Users can make the assumption that the current
-	source tree always has stronger security than the previous release.
-	However, building your own system from source code is not trivial;
-	it is over 850MB of source code, and problems do occur as we
-	transition between major releases.
-<li>Install a binary snapshot for your
-	architecture, which are made available fairly often.  For
-	instance, an amd64 snapshot is typically made available daily.
+<li>Если вы разбираетесь в технической стороне вопроса, следите за
+	<a href="../mail.html">рассылкой, об изменениях в исходниках</a>
+	и не пропускайте вещей, связаных с безопасностью.
+	А так как подтверждение о возможных атаках для многих исправлений
+	не доказана, не ожидайте, что в commit сообщении будет сказано
+	"SECURITY FIX!". Если проблема доказана и серьёзна, исправление
+	появится здесь очень быстро.
+<li>Постоянно использовать самые свежие исходники из репозитория и время от
+	времени полностью пересобирать систему (тщательно прочитайте
+	/usr/src/Makefile). Не забывайие, что более свежие исходники из
+	репозитория всегда более стабильны, чем в репах для прошлых релизов.
+	Однако,	собрать систему из исходников самому не так-то и просто;
+	это большее 850МБ кода, и могут возникнуть проблемы при обновлении.
+<li>Устанавливать бинарный снапшот для вашей архитектуры, которые создаются
+        довольно часто. Например, новые снапшоты для amd64 обычно создаются
+	ежедневно.
 </ul>
 
 <p>
