--- a/security.html
+++ b/security.html
@@ -79,7 +79,7 @@
 OpenBSD верит в стойкую безопасность. Мы стремимся быть ПЕРВЫМИ в области
 безопасности (если уже не стали ими). Благодаря нашей открытой модели
 разработки, мы имеем абсолютно бескомпромиссный взгяд на вопросы
-безопасности, чем большинство других поставщиков. Мы можем делать такие
+безопасности, в отличие от большинства других проектов. Мы можем делать такие
 изменения, на которые другие не пошли бы. Кроме того, благодаря
 <a href="crypto.html">криптографии</a>, используемой в OpenBSD, у нас
 больше возможностей и подходов к устранению проблем безопасности.
@@ -97,8 +97,8 @@ OpenBSD верит в стойкую безопасность. Мы стреми
 какие-то нюансы от своих пользователей.<p>
 
 Информация, касающаяся безопасности, распространяется очень быстро среди
-взломщиков. С другой строны, наш опыт позволяет уже в течении часа
-выпускать исправления. Таким образом, мы считаем, что полное разглашение
+взломщиков, но наш опыт позволяет уже в течении часа
+выпускать исправления. Поэтому мы считаем, что полное разглашение
 о проблемах поможет людям, которые заботятся и переживают по поводу
 безопасности.<p>
 
@@ -106,26 +106,27 @@ OpenBSD верит в стойкую безопасность. Мы стреми
 <li><h3><font color="#e00000">Аудит процесс</font></h3><p>
 
 От шести до двенадцати человек входят в команду, кто продолжает
-искать и исправлять ошибки безопасности. Мы проводим аудит с лета 1996г.
-Процесс по улучшению безопасности охватывает все области системы, файл за
-файлом мы анализируем каждый компонент программы. Мы не столько ищем ошибки
-безопасности, сколько простые программные ошибки. Если спустя годы кто-то
-обнаружит уязвимость, у нас она скорее всего уже будет исправленна, так как
-это была просто ошибка в коде. Те или иные изъяны были найдены в процессе
-аудита почти в каждом компоненте системы. Были найдены совершенно новые
-категории проблем безопасности, и часто исходной код, который уже прошёл
-аудит, нуждался в дополнительной проверке. Исходной код обычно проверяется
-несколько раз разными людьми с разным опытом.<p>
+искать и исправлять ошибки в нашем репозитории. Мы проводим аудит с
+лета 1996г. Процесс по улучшению безопасности охватывает все части системы,
+файл за файлом мы анализируем каждый компонент программы. Мы не столько
+ищем ошибки безопасности, сколько простые программные ошибки. Если
+спустя годы кто-то обнаружит уязвимость, у нас она скорее всего уже
+будет исправленна, так как причиной уязвимости скорее всего была
+обычная ошибка в коде. Те или иные проблемы были найдены в процессе
+аудита почти в каждом компоненте системы. Были найдены совершенно
+новые категории проблем безопасности, и часто исходной код, который
+уже прошёл аудит, нуждался в дополнительной перепроверке. Исходной
+код обычно проверяется несколько раз разными людьми с разным опытом.<p>
 
 Некоторые члены из нашей аудит команды работали в Secure Networks -
 компании, занимающейся сканированием сетей на предмет сетевых уявзвимостей
 и созданием Ballista - пакет программ для проверки сетей на безопасность.
 (Secure Networks бала куплена Network Associates, Ballista переименована
 в Cybercop Scanner.) Эта компания проводила множество тестов и исследований
-уязвимостей и, таким образом, имеет хороший опыт в этой области. OpenBSD
+уязвимости и, таким образом, имеет хороший опыт в данной области. OpenBSD
 проходила все проверки Ballista с первого же дня тестирования.<p>
 
-Другой аспект процесса проверки - про-активность. Во многих случаях мы
+Другой аспект процесса проверки - проактивность. Во многих случаях мы
 обнаруживаем, что найденная уязвимость неактуальна. Тем не менее, в ходе
 процесса аудита мы находим множество ошибок, стараемся их исправить, даже
 если уязвимость не доказана. Мы исправляем одни ошибки и продолжаем искать
@@ -183,36 +184,36 @@ Networks.<p>
 устранены в течение этого почти годового периода; ошибки подобно стандартным
 переполнением буфера, слабостям реализации протокола, сбору информации,
 и гонкам файловых систем. Большинство проблем безопасности, с которыми мы
-столкнулись, были устранены перед релизом 2.1, и затем, намного меньше
-исправлений необходимо было в следующем релизе 2.2. Мы больше не находим
-так много ошибок, это простой факт их исчезновения. Однако недавно
+столкнулись, были устранены перед релизом 2.1, а затем, уже намного меньше
+исправлений необходимо было сделать для следующего релиза 2.2. Мы больше
+не находим так много ошибок, это простой факт их исчезновения. Однако недавно
 найденные и исправленные проблемы безопасности, имеют тенденцию быть
-значительно более сложными или неясными. Тем не менее, мы будем проводить
-аудит по ряду причин:<p>
+значительно более сложными или неясными. Тем не менее, мы будем продолжать
+проводить аудит по ряду причин:<p>
 
 <ul>
-<li>Иногда мы находим простые проблемы, которые мы пропустили ранее. Буа!
-<li>Безопасность чем-то походит на гонку вооружений; лучшие нападающие
-продолжат искать более сложный путь для реализации атаки, также будем и мы.
-<li>Нахождение и исправление едва заметных недостатков в сложной программе
-доставляет не мало удовольствия.
+<li>Иногда мы находим простые проблемы, которые мы пропустили ранее.
+<li>Безопасность чем-то походит на гонку вооружений; кто-то продолжает
+искать более сложный путь для реализации атаки, так же будем делать и мы.
+<li>Поиск и исправление едва заметных уязвимостей в сложной программе
+доставляет удовольствие.
 </ul>
 <p>
 
 Процесс аудита ещё не закончен, и, как вы видите, мы продолжаем находить
-и исправлять все новые и новые изъяны безопасности.<p>
+и исправлять все новые и новые изъяны в безопасности.<p>
 
 <a name="default"></a>
 <li><h3><font color="#e00000">"Secure by Default"</font></h3><p>
 
 Для того, чтобы гарантировать, что начинающему пользователю нет надобности
 становиться экспертом по безопасности (точка зрения, которой, похоже,
-придерживаются другие производители), мы поставляем операционную систему в
+придерживаются другие авторы ПО), мы предлагаем операционную систему в
 режиме "Secure by Default". Это значит, что все второстепенные сервисы
 запрещены. Когда пользователь/администратор более глубоко освоится
-с этой системой, он поймет, что нужно разрешить работу некоторых демонов
-и других частей системы. По мере изучения того, как запустить какой-то
-новый сервер, новичок, скорее всего, ознакомится с требованиями
+с этой системой, он поймет, что нужно разрешить работу лишь некоторых
+демонов и других частей системы. По мере изучения того, как запустить
+какой-то новый сервер, новичок, скорее всего, ознакомится с требованиями
 безопасности.<p>
 
 Это совершенный контраст со все возрастающим числом систем, которые
@@ -225,7 +226,8 @@ Networks.<p>
 
 Так как проект OpenBSD находится в Канаде, у нас есть возможность
 использовать криптографию. Для получения дополнительной информации, читайте
-страницы о том, <a href="crypto.html">что уже сделано при помощи криптографии</a>.
+страницы о том,
+<a href="crypto.html">что мы уже сделали при помощи криптографии</a>.
 
 <li><h3><font color="#e00000">Advisories</font></h3><p>
 
@@ -236,7 +238,7 @@ Networks.<p>
 
 Так как относительно безопасности мы выбрали проактивную позицию, мы
 не перестаем находить и устранять новые проблемы безопасности. Тем не
-менее, не все из них придаются широкой ограске. Происходит это из-за того,
+менее, не все из них придаются широкой огласке. Происходит это из-за того,
 что (как уже было сказано) многие из них не представляют серьезной опасности,
 т.к. не могут быть использованы для проведения атак; многие простые ошибки,
 которые мы уже исправили в прошлом, оказывается, могли были привести к
@@ -250,24 +252,25 @@ Networks.<p>
 Если мы обнаружим, что проблема определённо связана с безопасностью,
 патчи появятся здесь <strong>ОЧЕНЬ</strong> быстро.<p>
 
-Те, кто действительно заботится о безопасности, могут делать следующее:<p>
+Вот что мы можем посоветовать тем, кто действительно заботится о
+безопасности:<p>
 
 <ul>
 <li>Если вы разбираетесь в технической стороне вопроса, следите за
-	<a href="../mail.html">рассылкой, об изменениях в исходниках</a>
-	и не пропускайте вещей, связаных с безопасностью.
-	А так как подтверждение о возможных атаках для многих исправлений
-	не доказана, не ожидайте, что в commit сообщении будет сказано
+	<a href="../mail.html">рассылкой, про изменениях в коде</a>
+	и не пропускайте тех из них, которые связаны с безопасностью.
+	А так как подтверждение о возможных атаках для многих изменений в коде
+	не доказана, не ожидайте, что в commit-сообщении будет сказано
 	"SECURITY FIX!". Если проблема доказана и серьёзна, исправление
 	появится здесь очень быстро.
 <li>Постоянно использовать самые свежие исходники из репозитория и время от
 	времени полностью пересобирать систему (тщательно прочитайте
-	/usr/src/Makefile). Не забывайие, что более свежие исходники из
+	/usr/src/Makefile). Не забывайте, что более свежие исходники из
 	репозитория всегда более стабильны, чем в репах для прошлых релизов.
-	Однако,	собрать систему из исходников самому не так-то и просто;
-	это большее 850МБ кода, и могут возникнуть проблемы при обновлении.
+	Однако собрать систему из исходников самому не так-то просто;
+	это большее 850МБ исходного кода, и могут возникнуть проблемы при обновлении.
 <li>Устанавливать бинарный снапшот для вашей архитектуры, которые создаются
-        довольно часто. Например, новые снапшоты для amd64 обычно создаются
+  довольно часто. Например, новые снапшоты для amd64 обычно создаются
 	ежедневно.
 </ul>
 
@@ -278,16 +281,16 @@ Networks.<p>
 <p> Если вы обнаружили новую уязвимость, сообщите нам, отправив письмо на
 <a href="mailto:deraadt@openbsd.org">deraadt@openbsd.org</a>.
 <br>
-Если вы желаете зашифровать письмо при помощи PGP (пользуйтесь им
-только при крайней необходимости, так как это не так удобно), используйте этот
+Если вы хотите зашифровать письмо при помощи PGP (пользуйтесь им
+только при крайней необходимости, так как это неудобно), используйте этот
 <a href="../advisories/pgpkey.txt">pgp ключ</a>.
 
 <p>
 <a name="papers"></a>
 <li><h3><font color="#e00000">Дополнительно</font></h3><p>
 
-OpenBSD разработчиками написаны <a href="papers/index.html">материалы</a>,
-некоторые из которых так или иначе связаны с темой безопасности.
+Разработчиками OpenBSD написаны <a href="papers/index.html">материалы</a>,
+некоторые из которых так или иначе связаны с темой security.
 </ul>
 
 </body>
