[1.729] link to local openssh/index.html

--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
     <td class="align-bottom">
       <hr>
       Associated projects:
-      <a href="https://www.openssh.com">OpenSSH</a>,
+      <a href="openssh/index.html">OpenSSH</a>,
       <a href="http://www.openbgpd.org">OpenBGPD</a>,
       <a href="http://www.openntpd.org">OpenNTPD</a>,
       <a href="https://www.opensmtpd.org">OpenSMTPD</a>,
